trying to deploy to domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://moonh94.github.io/reactPort",
-  "name": "reactPort",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "engines": {
