--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moonh94.github.io/reactPort",
+  "homepage": ".",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
